<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv_english">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/iv_english"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"/>
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_english_value"
            android:layout_toRightOf="@id/iv_english"
            android:textSize="15pt"
            android:text="@string/english_value"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_delete_english"
            android:layout_below="@+id/bt_edit_english"
            android:layout_toRightOf="@+id/tv_english_spelling"
            android:src="@android:drawable/ic_menu_delete"
            />
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_english_abbreviation"
            android:layout_toRightOf="@id/iv_english"
            android:layout_below="@+id/tv_english_value"
            android:text="@string/english_abbreviation"
            android:textSize="10pt"

            />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_english_spelling"
            android:layout_below="@+id/tv_english_value"
            android:text="@string/english_spelling"
            android:textSize="10pt"
            android:layout_marginLeft="20dp"
            android:layout_toStartOf="@id/bt_edit_english"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_edit_english"
            android:src="@android:drawable/ic_menu_edit"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tv_english_value"
            android:layout_toEndOf="@+id/tv_english_value" />

    </RelativeLayout>


</android.support.v7.widget.CardView>